# ai-dispatcher

./: .env.example  .gitignore  CLAUDE.md  config.yaml.example  main.py  onetime.py  projects.yaml  pyproject.toml
.claude/: settings.local.json
dev_scheduler/: __init__.py  claude_runner.py  config.py  models.py  notion_client.py  scheduler.py  transitions.py  yaml_config.py
memory/plan/example/: hello-world.yaml
src/core/: config.py  models.py  projects_config.py  requirement_store.py  scheduler.py  transitions.py
src/runner/: base.py  claude.py  cursor.py  gemini.py
tests/: test_models.py  test_requirement_store.py  test_scheduler.py  test_transitions.py
