[project]
name = "dev-scheduler"
version = "0.1.0"
description = "AI task scheduler - Notion to Claude Code workflow automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notion-client>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
dev-scheduler = "main:main"
